--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,17 @@ after_success:
   - docker push kmlnuriyev/multi-nginx
   - docker push kmlnuriyev/multi-server
   - docker push kmlnuriyev/multi-worker
+
+# # To deploy to AWS
+# deploy:
+#   provider: elasticbeanstalk
+#   region: us-west-1
+#   app: multi-docker
+#   env: MultiDocker-env
+#   bucket_name: elasticbeanstalk-us-west-1-306123435
+#   bucket_path: docker-multi
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: $AWS_SECRET_KEY
